public/css/application.css
@font-face {
  font-family: "LovelyHome";
  src: url("/font/subset-LovelyHome.eot"); /* IE9 Compat Modes */
  src: url("/font/subset-LovelyHome.eot?#iefix") format("embedded-opentype"), /* IE6-IE8 */
    url("/font/subset-LovelyHome.otf") format("opentype"), /* Open Type Font */
    url("/font/subset-LovelyHome.svg") format("svg"), /* Legacy iOS */
    url("/font/subset-LovelyHome.ttf") format("truetype"), /* Safari, Android, iOS */
    url("/font/subset-LovelyHome.woff") format("woff"), /* Modern Browsers */
    url("/font/subset-LovelyHome.woff2") format("woff2"); /* Modern Browsers */
  font-weight: normal;
  font-style: normal;
  font-display: swap;
}

html, body {
  height: 100%;
}
header, section, footer, aside, nav, main, article, figure {
  display: block;
}
footer {
  background-color:#f9f9f9;
}
pre {
  white-space:pre-wrap;
}
button.hide, button.remove, button.hide-all, button.remove-all {
  font-size:0.8rem;
  padding:0.25rem 0.35rem;
}
.btn-outline-light:hover{
  color:#212529 !important;
}
a, .page-link {
  color:#1F712C;
}
i.fa-feather{
  color:#318b3f !important;
}
a:hover, .page-link:hover{
  color:#003309;
}
.flex-wrap {
  -webkit-flex-wrap: wrap!important;
}
.custom-pills .active, .custom-pills .active:hover {
  color: #3a7179 !important;
  background-color: transparent !important;
  background-image: none !important;
  border: 1px solid #3a7179 !important;
}
.col{
  padding-left:10px;
  padding-right:10px;
}
.col-3{
  padding-right:5px;
  padding-left:5px;
}
.alert{
  padding-left:0.75rem;
  padding-right:0.75rem;
}
.alert-warning-light {
    color: #856404;
    background-color: #FFFEF2;
    border-color: #DDE0DD;
}
.alert-info {
  background-color:#D0EAD5;
  border-color:#A4D4AC;
  color:#0B5618;
}
.bg-dark {
  background-color:#012429!important;
}
.navbar-dark .navbar-nav .nav-link {
  color: rgba(255, 255, 255, 0.6);
}
#home-jumbotron{
  background-image: url('/images/banner.jpg');
  background-image: -webkit-image-set(url("/images/banner-small.jpg") 1x, url("/images/banner.jpg") 2x);
  background-image: image-set(url("/images/banner-small.jpg") 1x, url("/images/banner.jpg") 2x);
  background-size: cover;
  background-repeat: no-repeat;
  position:relative;
}
#home-jumbotron h1{
  font-weight:350;
  font-family:'LovelyHome';
  font-size:7.5rem;
  line-height:1.3;
  margin:0;
  color:#012429;
  text-shadow: -3px -3px 0 #fff, 3px -3px 0 #fff, -3px 3px 0 #fff, 3px 3px 0 #fff;
}
#home-jumbotron div.attribution{
  position:absolute;
  right:0px;
  bottom:0px;
  background-color:#fff;
  opacity: 0.9;
}
.tagline {
  font-size:1.75rem;
}
#main{
  padding-top:1rem;
}
.jumbotron{
  margin-bottom:0;
  padding:1rem;
}
.jumbotron .text-muted{
  margin-bottom:0.5rem;
}
.profile-examples {
  margin-bottom:1rem;
}

.alt-name-wrapper{
  margin-top:0.8rem;
}
.alt-name{
  display:block;
}
.connect-orcid-button:hover {
  color: #fff;
  text-decoration:none;
}
.connect-orcid-button a:hover{
  color: #fff;
  text-decoration:none;
}
.page-item.active .page-link{
  background-color:#1F712C;
  border-color:#dee2e6;
}

.table td {
  font-size:0.8rem;
}

table th.selector{
  text-align:center;
}

table th.btn-selector{
  width:80px;
  min-width:80px;
  max-width:80px;
}

table th.btn-selector-wide{
  width:85px;
  min-width:85px;
  max-width:85px;
}

table td.selector{
  text-align:center;
}

.btn-light.active.disabled, .btn-light.active:disabled {
  background-color:#dae0e5;
}

.toggle-off.btn-sm {
  padding-left: 17px !important;
}
.toggle-off {
  box-shadow: inset 0 3px 5px rgba(0, 0, 0, .125);
}
.toggle.off {
  border-color: rgba(0, 0, 0, .25);
}

.toggle-handle {
  background-color: white;
  border: thin rgba(0, 0, 0, .25) solid;
}

.alert-dismissible{
  display:none;
}
.alert{
  margin-top:1rem;
}
.tiny-margins{
  margin-left:0.1em;
  margin-right:0.1em;
}
.medium-margins{
  margin-left:0.25rem;margin-right:0.25rem;
}
.card-hover:hover{
  background-color: rgba(0, 0, 0, 0.075);
}

.y-scroll{
  overflow-y:scroll;
}

#admin-tabs .active{
  background-color:transparent;
  border-bottom-color:#fff3cd;
}

#tabs-column .active{
  border-bottom-color:#fff;
}

h4 {
  margin-top:0.5em;
}
h4.list-header {
  padding:0.75rem 0rem;
}
div.list-header{
  padding:0.75rem 0rem;
}
.bulk-label{
  text-align:center;
  font-size:0.75em;
}
.dropdown-item.active, .dropdown-item:active {
  color: #fff;
  text-decoration: none;
  background-color: #1F712C;
}

/* Fix Google Chart cursor flickering */
svg > g > g:not([column-id]):last-child { pointer-events: none }

#map-collected path:not([fill^="#f5f5f5"]):hover,
#map-identified path:not([fill^="#f5f5f5"]):hover,
#country-map path:not([fill^="#f5f5f5"]):hover {
  cursor:pointer;
}

.twitter {
  background-color:#4099ff;
  color:#fff;
  width:42px;
  height:42px;
  border-radius:100px;
  line-height:20px;
  font-size:23px;
  display:inline-block;
  text-align:center;
}

.twitter:hover {
  color:#fff;
  background-color:#57a5ff;
}

.twitter i {
  font-size:23px;
  line-height:42px;
}

.github {
  background-color:#012429;
  color:#fff;
  width:42px;
  height:42px;
  border-radius:100px;
  line-height:20px;
  font-size:23px;
  display:inline-block;
  text-align:center;
}

.github:hover {
  color:#fff;
  background-color:#02414b;
}

.github i {
  font-size:23px;
  line-height:42px;
}

.crowdin {
  background-color:#2f333f;
  color:#fff;
  width:42px;
  height:42px;
  border-radius:100px;
  font-size:23px;
  display:inline-block;
  text-align:center;
}

.crowdin:hover {
  color:#fff;
  background-color:#02414b;
}

.fa-orcid{
  color:#A6CE39;
}

.progress-border {
  border:1px solid rgba(0,0,0,.125);
}

dl.dl-horizontal {
  display: table;
  min-width: 400px;
}
dl.dl-horizontal dt, dl.dl-horizontal dd {
  overflow: visible;
}

dl.dl-horizontal dt {
  display: table-cell;
  text-align: right;
  white-space: nowrap;
  font-weight: 700;
  width:135px;
}
dl.dl-horizontal dd {
  display: table-cell;
  padding: 2% 5%;
  width: 100%;
}
/* ... */

